# web_editor

./: Cargo.toml  README.md
.github/workflows/: rust.yml
docs/: index.html  manifest.json  sw.js  web_editor.js  web_editor_bg.js  web_editor_bg.wasm
models/: DemoHead.stl  Dog.ply
src/: app.rs  camera.rs  lib.rs  mesh.rs  remesh.rs  render.rs  simplification.rs
