[package]
name = "web_editor"
default-run = "web_editor_bin"
version = "0.1.0"
authors = ["kyrylo"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "web_editor_bin"
path = "src/main.rs"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
egui = "0.18"
eframe = "0.18"
egui_glow = "0.18"

cgmath = "0.18"

stl_io = "0.6"
ply-rs = "0.1"

rfd = "0.8"
wasm-bindgen-futures = "0.4"
oneshot = "0.1"

js-sys = "0.3"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    'Document',
    'Element',
    'Window',
    'HtmlAnchorElement',
    'Url',
    'Blob',
    'BlobPropertyBag',
    'EndingTypes'
] }

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"

[profile.release]
opt-level = 2 # fast and small wasm


[patch.crates-io]
# If you want to use the bleeding edge version of egui and eframe:
# egui = { git = "https://github.com/emilk/egui", branch = "master" }
# eframe = { git = "https://github.com/emilk/egui", branch = "master" }

# If you fork https://github.com/emilk/egui you can test with:
# egui = { path = "../egui/egui" }
# eframe = { path = "../egui/eframe" }
